# OrbitOS

./: .env.example  .gitignore  CLAUDE.md  DataFlow_Diagram_Details.txt  PPT_content.txt  Paper.docx  Paper.md  README.md  SRS.tex  SRS_Remote_Agent.tex  UseCase_Diagram_Details.txt  application_flow.docx  application_flow.txt  pyproject.toml  requirements.txt
config/: config.yaml  permissions.yaml
plugins/: README.md
src/: __init__.py  main.py
src/agent/: __init__.py  agent.py  code_prompts.py  prompts.py  providers.py
src/agent/tools/: __init__.py  adapter.py  apps.py  files.py  python.py  shell.py  system.py
src/bridges/: __init__.py  telegram_bridge.py
src/core/: __init__.py  auth.py  constants.py  mcp_server.py  opencode_agent.py  router.py
src/tools/: __init__.py  apps.py  base.py  files.py  python_exec.py  shell.py  system.py
src/utils/: __init__.py  logger.py  platform.py  sandbox.py
