[project]
name = "orbitos"
version = "0.1.0"
description = "Remote PC control system using FastMCP servers with Telegram interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "aiofiles>=23.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-openai>=0.3.0",
]

[dependency-groups]
dev = [
    "watchdog",
]
